Fixed horizontal scrollbar.

--- a/j-DataGrid/component.css
+++ b/j-DataGrid/component.css
@@ -24,7 +24,7 @@
 .dg-v-container { overflow: hidden; }
 .dg-v-body { overflow-y: auto; overflow-scrolling: touch; -webkit-overflow-scrolling: touch; overflow-x: hidden; outline: 0 !important; }
 .dg-row { height: 24px; font-size: 12px; border-bottom: 1px solid #E0E0E0; }
-.dg-row:nth-child(even) { background-color: rgba(0,0,0,0.03); }
+.dg-row:nth-child(even) { background-color: rgba(0,0,0,0.02); }
 .dg-row:hover { background-color: rgba(0,0,0,0.05); }
 .dg-col { float: left; border-left: 1px solid #E0E0E0; height: 23px; overflow: hidden; min-width: 30px; }
 .dg-col:first-child { border-left: 0; }
